--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "vue3-ncgen-demo1",
   "version": "0.0.0",
+  "author": "Daniel.xiao",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
